# WebcamChan

./: .env  .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
main/: CMakeLists.txt  idf_component.yml
main/include/: camera_pins.h
main/src/: main.c  usb_descriptors_override.c
module/face/: CMakeLists.txt  idf_component.yml
module/face/include/: avatar.h
module/face/src/: avatar.c
module/uvc_ctrl/: CMakeLists.txt
module/uvc_ctrl/include/: uvc_ctrl_params.h  uvc_ctrl_registry.h  uvc_ctrl_state.h
module/uvc_ctrl/src/: uvc_ctrl_params.c  uvc_ctrl_registry.c
